# hooksett

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: __init__.py  ai_types.py  class.py  class_local_vars.py  config.yaml  custom_types_demo.py  feature_types.py  function.py  hooksett_class_fix.py  indentation_error_demo.py  local_vars.py  ml_model.py  ml_types.py  traced_example.py
src/hooksett/: __init__.py  hooks.py
tests/: __init__.py  conftest.py  test_core.py  test_hooks.py
