[project]
authors = [{name = "Rahul Dave", email = "rahuldave@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "hooksett"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
hooksett = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.13"
pyyaml = ">=6.0.2,<7"
